<resources>
    <string name="app_name">The-Hotel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str1">Find A Perfect Healing</string>
    <string name="str2">Place For Your Health</string>
    <string name="p1">The-Hotel, building that provides lodging, meals, and other services to the traveling public on a commercial basis.</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="p2">Start managing your life in a better way</string>
    <string name="enter_username">Enter UserName</string>
    <string name="enter_password">Enter Password</string>
    <string name="error">Atleast 8 Charcters</string>
    <string name="forget_password">Forget password ?</string>
    <string name="sign_in">Sign In</string>
    <string name="google">Sign In With Google</string>
    <string name="apple">Apple</string>
    <string name="new1">New To Our App ?</string>
    <string name="signup_here">SignUp Here</string>
    <string name="getting_started">Getting Started</string>
    <string name="find_your">Find Your</string>
    <string name="destination_here">Destination Here</string>
    <string name="search_here">Search Here</string>
    <string name="hotels_near_you">Hotels Near You</string>
    <string name="view_all">View All</string>
    <string name="create_an_account">Create An Account</string>
    <string name="full_name">Full Name</string>
    <string name="phone_no">Phone No</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account !</string>
    <string name="signout">SignOut</string>
    <string name="contact_us">Contact Us</string>
</resources>