<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login">

    <com.google.android.material.imageview.ShapeableImageView
        android:src="@drawable/holidays"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_width="200dp"
        android:layout_height="200dp"/>
    
    <com.google.android.material.textview.MaterialTextView
        android:text="@string/welcome_back"
        android:textSize="32sp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="2dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        android:text="@string/p2"
        android:textSize="18sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:placeholderText="Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name"
            android:hint="@string/enter_username"
            android:drawableEnd="@drawable/baseline_person_pin_24"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:placeholderText="@string/error"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#0091EA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_password"
            android:hint="@string/enter_password"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_pass"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:textColor="#0091EA"
        android:layout_gravity="end"
        android:layout_marginEnd="37dp"
        android:text="@string/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_SignIn"
        android:text="@string/sign_in"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:translationZ="5dp"
        android:stateListAnimator="@null"
        android:layout_width="128dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

    <View
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:src="@drawable/google"
            android:layout_width="60dp"
            android:layout_height="60dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_google_signin"
            android:text="@string/google"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:translationZ="5dp"
            android:stateListAnimator="@null"
            android:layout_marginEnd="10dp"/>

        <View
            android:background="@color/black"
            android:layout_width="2dp"
            android:layout_height="50dp"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:src="@drawable/apple"
            android:layout_marginStart="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_apple_signin"
            android:text="@string/apple"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:translationZ="5dp"
            android:stateListAnimator="@null"
            android:layout_marginEnd="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/new1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_signup"
            android:text="@string/signup_here"
            android:textStyle="bold"
            android:layout_marginStart="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>