<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/str1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/str1"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/str2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str2"
        android:layout_marginTop="5dp"
        android:textSize="27sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@id/str1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager2"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_get_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p1"
        android:textSize="17sp"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        app:layout_constraintBottom_toTopOf="@id/btn_get_start"
        android:layout_marginBottom="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_get_start"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:translationZ="12dp"
        android:paddingStart="52dp"
        android:paddingEnd="52dp"
        android:textSize="17sp"
        android:gravity="center"
        android:stateListAnimator="@null"
        android:textAlignment="center"
        android:layout_margin="12dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>